Updated pom.xml to use correct tag format and have release plugin do deploy

--- a/java/pom.xml
+++ b/java/pom.xml
@@ -180,6 +180,10 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
                         </configuration>
                     </execution>
                 </executions>
+                <configuration>
+                    <goals>deploy</goals>
+                    <tagNameFormat>v@{project.version}</tagNameFormat>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.sonatype.plugins</groupId>
