--- a/java/pom.xml
+++ b/java/pom.xml
@@ -1,10 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.rapidpro</groupId>
     <artifactId>expressions</artifactId>
-    <version>1.0.6-SNAPSHOT</version>
+    <version>1.0.6</version>
     <packaging>jar</packaging>
 
     <name>RapidPro Expressions</name>
@@ -42,7 +41,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
         <connection>scm:git:git@github.com:rapidpro/expressions.git</connection>
         <developerConnection>scm:git:git@github.com:rapidpro/expressions.git</developerConnection>
         <url>git@github.com:rapidpro/expressions.git</url>
-        <tag>HEAD</tag>
+        <tag>v1.0.6</tag>
     </scm>
 
     <dependencies>
