--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: python
 python:
     - '2.7'
 install:
-    - pip install -r requirements/tests.txt --upgrade
+    - pip install -r python/requirements/tests.txt --upgrade
     - sudo apt-get install maven2
 script:
     - cd python && nosetests -s && cd ..
