--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ python:
     - '2.7'
 install:
     - pip install -r python/requirements/tests.txt --upgrade
-    - sudo apt-get install maven2
+    - sudo apt-get update && sudo apt-get install maven2 -y
 script:
     - cd python && nosetests -s && cd ..
     - cd java && mvn clean test && cd ..
