--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install:
 - sudo apt-get update && sudo apt-get install maven2 -y
 - cd js && npm install && cd ..
 script:
-- cd python && nosetests -s && coverage run --source="." temba_expressions --verbosity=2 --noinput && cd ..
+- cd python && nosetests --with-coverage --cover-erase --cover-package=temba_expressions && cd ..
 - cd java && mvn clean test && cd ..
 - cd js && karma start && cd ..
 notifications:
