--- a/js/package.json
+++ b/js/package.json
@@ -5,7 +5,7 @@
     "jasmine-core": "2.3.4",
     "karma": "0.13.10",
     "karma-chrome-launcher": "0.1.7",
-    "karma-firefox-launcher": "0.1.6",
+    "karma-phantomjs-launcher": "0.2.1",
     "karma-coverage": "0.2.7",
     "karma-coveralls": "0.1.5",
     "karma-jasmine": "0.3.5",
