--- a/js/package.json
+++ b/js/package.json
@@ -1,14 +1,16 @@
 {
   "name": "rapidpro-expressions",
   "version": "0.1.0",
+  "repository": "git@github.com:rapidpro/expressions.git",
+  "license": "BSD-3-Clause",
   "dependencies": {
-    "jasmine-core": "2.3.4",
-    "karma": "0.13.10",
-    "karma-chrome-launcher": "0.1.7",
-    "karma-phantomjs-launcher": "0.2.1",
-    "karma-coverage": "0.2.7",
-    "karma-coveralls": "0.1.5",
-    "karma-jasmine": "0.3.5",
-    "karma-cli": "0.1.1"
+    "jasmine-core": "2.4.1",
+    "karma": "0.13.19",
+    "karma-chrome-launcher": "0.2.2",
+    "karma-phantomjs-launcher": "1.0.0",
+    "karma-coverage": "0.5.3",
+    "karma-coveralls": "1.1.2",
+    "karma-jasmine": "0.3.7",
+    "karma-cli": "0.1.2"
   }
 }
