--- a/java/pom.xml
+++ b/java/pom.xml
@@ -27,7 +27,7 @@
     </developers>
 
     <properties>
-        <antlr.version>4.5.1</antlr.version>
+        <antlr.version>4.7</antlr.version>
         <gson.version>2.3.1</gson.version>
         <junit.version>4.12</junit.version>
         <hamcrest.version>1.3</hamcrest.version>
@@ -95,7 +95,7 @@
             <plugin>
                 <groupId>org.antlr</groupId>
                 <artifactId>antlr4-maven-plugin</artifactId>
-                <version>4.5</version>
+                <version>4.7</version>
                 <executions>
                     <execution>
                         <goals>
@@ -106,6 +106,10 @@
                 <configuration>
                     <visitor>true</visitor>
                     <listener>false</listener>
+                    <libDirectory>${basedir}/src/main/antlr4/io/rapidpro/expressions</libDirectory>
+                    <excludes>
+                        <exclude>**/LexUnicode.g4</exclude>
+                    </excludes>
                 </configuration>
             </plugin>
             <plugin>
