--- a/java/pom.xml
+++ b/java/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>io.rapidpro</groupId>
     <artifactId>expressions</artifactId>
-    <version>1.4.0</version>
+    <version>1.4.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>RapidPro Expressions</name>
@@ -41,7 +41,7 @@
         <connection>scm:git:git@github.com:rapidpro/expressions.git</connection>
         <developerConnection>scm:git:git@github.com:rapidpro/expressions.git</developerConnection>
         <url>git@github.com:rapidpro/expressions.git</url>
-        <tag>v1.4.0</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <dependencies>
